...
            "state" : "translated",
            "value" : "Data di modifica"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eliminar"
          }
...
            "state" : "translated",
            "value" : "Inserisci qui la descrizione del problema"
          }
        }
      }
    },
    "Enter the issue title here" : {
      "comment" : "Fields that let the users enter details about a specific issue",
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Escribe el título del problema aquí"
...
            "state" : "translated",
            "value" : "Inserisci qui il titolo del problema"
          }
        }
      }
    },
    "Filter" : {
      "comment" : "A button that shows a menu with the following options",
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filtrar"
...
            "state" : "translated",
            "value" : "Filtra problemi, o digita # per aggiungere tag"
          }
        }
      }
    },
    "Filters" : {
      "comment" : "SIDEBARVIEW",
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filtros"
...
            "state" : "translated",
            "value" : "Filtri"
          }
        }
      }
    },
    "High" : {
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alta"
          }
...
            "state" : "translated",
            "value" : "Alta priorità"
          }
        }
      }
    },
    "Issues" : {
      "comment" : "CONTENTVIEW",
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Problemas"
...
            "state" : "translated",
            "value" : "Problemi"
          }
        }
      }
    },
    "Locked" : {
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bloqueado"
          }
...
            "state" : "translated",
            "value" : "Medio"
          }
        }
      }
    },
    "New issue" : {
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nuevo problema"
          }
...
            "state" : "translated",
            "value" : "Nessun tag"
          }
        }
      }
    },
    "OK" : {
      "comment" : "GENERAL STRINGS",
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aceptar"
...
            "state" : "translated",
            "value" : "Rinomina tag"
          }
        }
      }
    },
    "Showing Awards" : {
      "localizations" : {
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mostrar premios"
          }
...
